--- a/resources/sass/object/component/_c-badge.scss
+++ b/resources/sass/object/component/_c-badge.scss
@@ -3,8 +3,6 @@
    position: absolute;
    min-width: 20px;
    min-height: 20px;
-   // padding-top: 3px;
-   // padding-right: 1px;
    padding: 4px 3px 3px;
    margin-left: 2px;
    font-size: 11px;
@@ -15,5 +13,19 @@
    opacity: 0.95;
    &.-over {
       @include border-radius('all', 20%);
+   }
+
+   &__mark {
+      @include border-radius('all', 50%);
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background-color: $red;
+      opacity: 0.95;
+
+      &.-public {
+         top: 9px;
+         left: 30px;
+      }
    }
 }
