--- a/resources/sass/object/project/_p-sidebar.scss
+++ b/resources/sass/object/project/_p-sidebar.scss
@@ -16,6 +16,7 @@
    }
    &__link {
       @include border-radius;
+      position: relative;
       display: flex;
       align-items: center;
       width: 100%;
