--- a/resources/sass/object/component/_c-badge.scss
+++ b/resources/sass/object/component/_c-badge.scss
@@ -14,6 +14,14 @@
    &.-over {
       @include border-radius('all', 20%);
    }
+   &.-public {
+      top: 36px;
+      right: 21px;
+   }
+   &.-direct {
+      top: 30px;
+      right: 21px;
+   }
 
    &__mark {
       @include border-radius('all', 50%);
