新着通知 / バッジの変更

--- a/resources/sass/object/component/_c-badge.scss
+++ b/resources/sass/object/component/_c-badge.scss
@@ -38,5 +38,9 @@
          top: 9px;
          left: 30px;
       }
+      &.-notification {
+         top: -4px;
+         left: 7px;
+      }
    }
 }
