--- a/public/css/app.css
+++ b/public/css/app.css
@@ -578,6 +578,11 @@ pre {
   left: 30px;
 }
 
+.c-badge__mark.-notification {
+  top: -4px;
+  left: 7px;
+}
+
 .c-btn {
   border-radius: 2px;
   display: inline-block;
@@ -2169,23 +2174,6 @@ pre {
   .p-header__navName {
     font-size: 13px;
   }
-}
-
-.p-header__notificationNum {
-  border-radius: 50%;
-  position: absolute;
-  top: -12px;
-  left: 3px;
-  width: 18px;
-  height: 18px;
-  padding-top: 3px;
-  padding-right: 1px;
-  font-size: 11px;
-  font-weight: bold;
-  color: #fff;
-  text-align: center;
-  background-color: #dc3545;
-  opacity: 0.95;
 }
 
 .p-header__navIcon {
