--- a/resources/sass/object/component/_c-card.scss
+++ b/resources/sass/object/component/_c-card.scss
@@ -265,6 +265,9 @@
          font-size: 10px;
       }
    }
+   &__msgWrap {
+      width: 95%;
+   }
    &__msgTitle {
       @include ellipsis;
       padding-left: 5px;
@@ -354,6 +357,7 @@
    }
    &__dm {
       @include ellipsis;
+      width: 95%;
       padding-top: 2px;
       font-size: 12px;
       @include mq('xs') {
