--- a/public/css/app.css
+++ b/public/css/app.css
@@ -732,10 +732,11 @@ pre {
   overflow: scroll;
   font-size: 14px;
   font-weight: bold;
+  overflow-wrap: break-word;
   border: 1px solid #ced4da;
-  /* Chrome, Safari 対応 */
   scrollbar-width: none;
   /* Firefox 対応 */
+  /* Chrome, Safari 対応 */
 }
 
 @media screen and (max-width: 414px) {
@@ -3107,10 +3108,9 @@ pre {
 .p-profile__proFirst {
   border-radius: 2px 0 0 2px;
   display: flex;
-  flex-basis: 20%;
   flex-direction: column;
   align-items: center;
-  width: 100px;
+  width: 20%;
   padding-top: 30px;
   color: #fff;
   background-color: #0081ff;
@@ -3150,14 +3150,9 @@ pre {
   }
 }
 
-.p-profile__proName {
-  padding: 0 10px;
-  font-size: 14px;
-}
-
 .p-profile__proSecond {
   border-radius: 0 2px 2px 0;
-  flex-basis: 80%;
+  width: 80%;
   padding: 30px;
 }
 
@@ -3171,6 +3166,23 @@ pre {
   .p-profile__proSecond {
     padding: 25px 15px;
   }
+}
+
+.p-profile__proNameWrap {
+  margin-bottom: 40px;
+}
+
+.p-profile__proNameHead {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.p-profile__proName {
+  border-radius: 2px;
+  padding: 10px;
+  font-size: 14px;
+  overflow-wrap: break-word;
+  border: 1px solid #adb5bd;
 }
 
 .p-profile__proResult {
@@ -3220,6 +3232,10 @@ pre {
   padding-left: 20px;
 }
 
+.p-profile__proIntroduction {
+  width: 100%;
+}
+
 .p-profile__proIntroductionBody {
   border-radius: 2px;
   min-height: 275px;
@@ -3227,6 +3243,7 @@ pre {
   font-size: 14px;
   line-height: 1.3;
   letter-spacing: 0.5px;
+  overflow-wrap: break-word;
   white-space: pre-wrap;
   border: 1px solid #adb5bd;
 }
@@ -3347,7 +3364,7 @@ pre {
 }
 
 .p-pubmsg__parentRight {
-  width: 100%;
+  width: 90%;
 }
 
 .p-pubmsg__parentName {
@@ -3378,6 +3395,7 @@ pre {
 .p-pubmsg__parentTitle {
   margin-bottom: 7px;
   font-weight: bold;
+  overflow-wrap: break-word;
 }
 
 @media screen and (max-width: 414px) {
@@ -3392,6 +3410,7 @@ pre {
   margin: 0;
   margin-bottom: 13px;
   font-size: 13px;
+  overflow-wrap: break-word;
   white-space: pre-wrap;
 }
 
@@ -3450,6 +3469,10 @@ pre {
   }
 }
 
+.p-pubmsg__childRight {
+  width: 88%;
+}
+
 .p-pubmsg__childName {
   margin-bottom: 5px;
   font-size: 11px;
@@ -3468,6 +3491,7 @@ pre {
   letter-spacing: 0.5px;
   margin: 0;
   font-size: 13px;
+  overflow-wrap: break-word;
   white-space: pre-wrap;
 }
 
@@ -3610,6 +3634,7 @@ pre {
   margin-bottom: 60px;
   font-size: 18px;
   text-align: left;
+  overflow-wrap: break-word;
   background-color: #bedcfd;
   border-left: 7px solid #0081ff;
 }
@@ -3673,6 +3698,7 @@ pre {
 
 .p-workDetail__infoUpperItem.-left > span {
   font-size: 12px;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 414px) {
@@ -3721,6 +3747,11 @@ pre {
     height: 19px;
     margin-right: 5px;
   }
+}
+
+.p-workDetail__infoName {
+  width: 25%;
+  overflow-wrap: break-word;
 }
 
 @media screen and (max-width: 414px) {
@@ -3898,6 +3929,7 @@ pre {
   padding: 20px;
   margin: 0;
   font-size: 14px;
+  overflow-wrap: break-word;
   white-space: pre-wrap;
   border: 1px solid #ced4da;
 }
