--- a/resources/sass/object/project/_p-profile.scss
+++ b/resources/sass/object/project/_p-profile.scss
@@ -14,10 +14,9 @@
    &__proFirst {
       @include border-radius('left');
       display: flex;
-      flex-basis: 20%;
       flex-direction: column;
       align-items: center;
-      width: 100px;
+      width: 20%;
       padding-top: 30px;
       color: $white;
       background-color: $primary;
@@ -46,15 +45,11 @@
          margin-right: 5px;
       }
    }
-   &__proName {
-      padding: 0 10px;
-      font-size: 14px;
-   }
 
    // PC:右側 / スマホ:下部
    &__proSecond {
       @include border-radius('right');
-      flex-basis: 80%;
+      width: 80%;
       padding: 30px;
       @include mq('md') {
          padding: 30px 20px;
@@ -63,6 +58,22 @@
          padding: 25px 15px;
       }
    }
+   // 名前
+   &__proNameWrap {
+      margin-bottom: 40px;
+   }
+   &__proNameHead {
+      margin-bottom: 5px;
+      font-weight: bold;
+   }
+   &__proName {
+      @include border-radius('all');
+      padding: 10px;
+      font-size: 14px;
+      overflow-wrap: break-word;
+      border: 1px solid $gray-500;
+   }
+   // 実績
    &__proResult {
       margin-bottom: 40px;
    }
@@ -95,6 +106,10 @@
       width: 70%;
       padding-left: 20px;
    }
+   // 自己紹介
+   &__proIntroduction {
+      width: 100%;
+   }
    &__proIntroductionBody {
       @include border-radius('all');
       min-height: 275px;
@@ -102,6 +117,7 @@
       font-size: 14px;
       line-height: 1.3;
       letter-spacing: 0.5px;
+      overflow-wrap: break-word;
       white-space: pre-wrap;
       border: 1px solid $gray-500;
       @include mq('xs') {
