--- a/resources/sass/object/project/_p-work-detail.scss
+++ b/resources/sass/object/project/_p-work-detail.scss
@@ -131,7 +131,7 @@
       }
    }
    &__infoName {
-      width: 25%;
+      width: 160px;
       overflow-wrap: break-word;
       @include mq('xs') {
          font-size: 13px;
