--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1157,6 +1157,13 @@ pre {
   outline-color: #0081ff;
 }
 
+.c-form__description {
+  margin-bottom: 2px;
+  font-size: 12px;
+  color: #6c757d;
+  text-align: right;
+}
+
 .c-form__invalid {
   font-size: 13px;
   color: #dc3545;
