--- a/resources/sass/object/component/_c-form.scss
+++ b/resources/sass/object/component/_c-form.scss
@@ -20,6 +20,12 @@
          outline-color: $primary;
       }
    }
+   &__description {
+      margin-bottom: 2px;
+      font-size: 12px;
+      color: $gray-600;
+      text-align: right;
+   }
    &__invalid {
       font-size: 13px;
       color: $red;
