--- a/resources/sass/object/component/_c-form.scss
+++ b/resources/sass/object/component/_c-form.scss
@@ -25,6 +25,9 @@
       font-size: 12px;
       color: $gray-600;
       text-align: right;
+      &.-empty {
+         margin-top: 12px;
+      }
    }
    &__invalid {
       font-size: 13px;
