--- a/resources/sass/object/component/_c-form.scss
+++ b/resources/sass/object/component/_c-form.scss
@@ -51,6 +51,7 @@
       @include border-radius;
       min-height: 60px;
       padding: 15px;
+      margin-bottom: 5px;
       font-size: 13px;
       resize: vertical;
       border: 1px solid $gray-400;
