--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3512,6 +3512,7 @@ pre {
   width: 100%;
   min-height: 90px;
   padding: 15px;
+  margin-bottom: 0;
   font-size: 13px;
   border: 1px solid #dee2e6;
 }
@@ -4012,6 +4013,13 @@ pre {
     flex-direction: column;
     padding: 0;
   }
+}
+
+.p-workForm__wrap.-price {
+  margin-top: -63px;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.2s;
 }
 
 .p-workForm__wrap.-price.is-active {
