--- a/resources/sass/object/project/_p-pubmsg.scss
+++ b/resources/sass/object/project/_p-pubmsg.scss
@@ -182,6 +182,7 @@
       width: 100%;
       min-height: 90px;
       padding: 15px;
+      margin-bottom: 0;
       font-size: 13px;
       border: 1px solid $gray-300;
       @include mq('xs') {
