--- a/resources/sass/object/project/_p-dm.scss
+++ b/resources/sass/object/project/_p-dm.scss
@@ -9,6 +9,7 @@
    width: 75%;
    padding: 10px 15px;
    font-size: 13px;
+   overflow-wrap: break-word;
    white-space: pre-wrap;
    @include mq('3xs') {
       width: 80%;
@@ -29,6 +30,7 @@
       bottom: -15px;
       font-size: 12px;
       color: #495057;
+      white-space: nowrap;
    }
 }
 
@@ -142,7 +144,7 @@
    }
    // フォーム
    &__form {
-      @include flex-center;
+      // @include flex-center;
       @include border-radius('bottom');
       flex-basis: 15%;
       flex-direction: column;
@@ -166,6 +168,10 @@
    }
    &__sendBtn {
       position: initial;
-      margin: 10px 0 0 auto;
+      display: block;
+      margin: 0 0 0 auto;
+      &.is-error {
+         margin-top: -16px;
+      }
    }
 }
