--- a/resources/sass/object/project/_p-pubmsg.scss
+++ b/resources/sass/object/project/_p-pubmsg.scss
@@ -19,13 +19,14 @@
       & > input {
          width: 100%;
          padding: 10px 15px;
-         margin-bottom: 0;
+         margin-bottom: 3px;
       }
       & > textarea {
          width: 100%;
          min-height: 200px;
          padding: 15px;
          margin-top: 10px;
+         margin-bottom: 3px;
          font-size: 13px;
          @include mq('xs') {
             font-size: 12px;
@@ -116,11 +117,12 @@
       }
    }
    &__parentBtn {
-      // right: 0;
-      // bottom: -9px;
       position: initial;
       display: block;
       margin: 0 0 0 auto;
+      &.is-error {
+         margin-top: -16px;
+      }
    }
 
    // 子_掲示板
