--- a/resources/sass/object/project/_p-mypage.scss
+++ b/resources/sass/object/project/_p-mypage.scss
@@ -61,6 +61,7 @@
    &__notificationTime {
       font-size: 11px;
       color: $gray-700;
+      white-space: nowrap;
    }
    &__notificationMsg {
       @include letter-settings;
