プロフィール編集の修正

--- a/resources/sass/object/project/_p-profile-edit.scss
+++ b/resources/sass/object/project/_p-profile-edit.scss
@@ -54,6 +54,15 @@
       }
       &.-mimes {
          margin-top: 4px;
+         @include letter-settings;
+         & > br {
+            display: none;
+         }
+         @include mq('xs') {
+            & > br {
+               display: block;
+            }
+         }
       }
       @include mq('3xs') {
          margin-top: 5px;
