--- a/resources/sass/object/project/_p-pubmsg.scss
+++ b/resources/sass/object/project/_p-pubmsg.scss
@@ -100,7 +100,7 @@
    &__parentTitle {
       margin-bottom: 7px;
       font-weight: bold;
-      overflow-wrap: break-word;
+      word-break: break-all;
       @include mq('xs') {
          font-size: 15px;
       }
@@ -110,7 +110,7 @@
       margin: 0;
       margin-bottom: 13px;
       font-size: 13px;
-      overflow-wrap: break-word;
+      word-break: break-all;
       white-space: pre-wrap;
       @include mq('xs') {
          font-size: 12px;
@@ -176,7 +176,7 @@
       @include letter-settings;
       margin: 0;
       font-size: 13px;
-      overflow-wrap: break-word;
+      word-break: break-all;
       white-space: pre-wrap;
       @include mq('xs') {
          font-size: 12px;
@@ -197,7 +197,11 @@
       }
    }
    &__childBtn {
-      right: 0;
-      bottom: -27px;
+      position: initial;
+      display: block;
+      margin: 2px 0 0 auto;
+      &.is-error {
+         margin-top: -14px;
+      }
    }
 }
