--- a/resources/sass/object/component/_c-card.scss
+++ b/resources/sass/object/component/_c-card.scss
@@ -18,9 +18,8 @@
    @include border-radius;
    position: relative;
    display: flex;
-   flex: 0 0 200px;
    flex-direction: column;
-   height: 225px;
+   height: 240px;
    padding: 25px 10px 10px;
    margin: 0 8px 15px 8px;
    color: $black;
@@ -28,7 +27,7 @@
    background-color: $white;
    box-shadow: rgba(0, 0, 0, 0.18) 2px 2px 6px;
    @include mq('xs') {
-      flex-basis: 48%;
+      width: 48%;
       height: 210px;
       margin: 0 10px 10px 0;
       &:nth-child(2n) {
@@ -36,7 +35,7 @@
       }
    }
    @include mq('3xs') {
-      flex-basis: 49%;
+      width: 49%;
       padding: 25px 5px 15px;
       margin: 0 5px 5px 0;
    }
@@ -77,20 +76,19 @@
    }
    &__head {
       @include letter-settings;
-      flex: 0 0;
-      flex-basis: 70px;
       width: 180px;
+      height: 100px;
       padding: 6px 10px;
       margin: 5px auto;
       overflow: scroll;
-      font-size: 14px;
+      font-size: 13px;
       font-weight: bold;
-      overflow-wrap: break-word;
+      word-break: break-all;
       border: 1px solid $gray-400;
       scrollbar-width: none; /* Firefox 対応 */
       @include mq('xs') {
-         flex-basis: 70px;
          width: 100%;
+         height: 70px;
          padding: 6px 7px;
          font-size: 12px;
       }
@@ -124,9 +122,14 @@
          }
       }
       &.-share {
-         width: 45px;
          margin-left: 5px;
          font-size: 40px;
+         @include mq('xs') {
+            font-size: 38px;
+         }
+         @include mq('2xs') {
+            font-size: 35px;
+         }
       }
    }
    &__contractWayWrap {
@@ -148,6 +151,7 @@
    &__contractWay {
       &.-share {
          margin-left: 6px;
+         white-space: nowrap;
       }
    }
    &__contractPrice {
@@ -262,6 +266,7 @@
       margin-top: 4px;
       font-size: 12px;
       color: $gray-700;
+      white-space: nowrap;
       @include mq('xs') {
          font-size: 10px;
       }
@@ -352,6 +357,7 @@
       margin-top: 4px;
       font-size: 12px;
       color: $gray-700;
+      white-space: nowrap;
       @include mq('xs') {
          font-size: 10px;
       }
