--- a/resources/sass/object/project/_p-profile.scss
+++ b/resources/sass/object/project/_p-profile.scss
@@ -70,7 +70,7 @@
       @include border-radius('all');
       padding: 10px;
       font-size: 14px;
-      overflow-wrap: break-word;
+      word-break: break-all;
       border: 1px solid $gray-500;
    }
    // 実績
@@ -117,7 +117,7 @@
       font-size: 14px;
       line-height: 1.3;
       letter-spacing: 0.5px;
-      overflow-wrap: break-word;
+      word-break: break-all;
       white-space: pre-wrap;
       border: 1px solid $gray-500;
       @include mq('xs') {
