--- a/resources/sass/object/component/_c-card.scss
+++ b/resources/sass/object/component/_c-card.scss
@@ -55,6 +55,25 @@
       transition: all 0.5s 0s ease;
       transform: scale(1.01, 1.01);
    }
+   &__decisionBadge {
+      @include border-radius('all', 50%);
+      @include flex-center;
+      position: absolute;
+      top: -6px;
+      right: -6px;
+      width: 40px;
+      height: 40px;
+      font-size: 12px;
+      font-weight: bold;
+      color: $white;
+      white-space: nowrap;
+      &.-decision {
+         background-color: $red;
+      }
+      &.-end {
+         background-color: $gray-600;
+      }
+   }
    &__nameWrap {
       @include ellipsis;
       position: absolute;
