応募者一覧画面 / タイトルにリンクの設定

--- a/resources/sass/object/project/_p-applicant.scss
+++ b/resources/sass/object/project/_p-applicant.scss
@@ -19,6 +19,7 @@
    }
    &__head {
       @include letter-settings;
+      display: block;
       padding: 10px;
       margin-bottom: 30px;
       font-size: 18px;
