--- a/resources/sass/object/project/_p-work-detail.scss
+++ b/resources/sass/object/project/_p-work-detail.scss
@@ -50,6 +50,9 @@
       word-break: break-all;
       background-color: $primary-light;
       border-left: 7px solid $primary;
+      @include mq('md') {
+         font-size: 16px;
+      }
       @include mq('3xs') {
          margin-bottom: 40px;
          font-size: 15px;
